--- a/to-do-list-app/task/task.html
+++ b/to-do-list-app/task/task.html
@@ -1,1 +1,40 @@
-<!-- Structure -->
+<!-- login page -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="..\global\global.css" />
+    <title>Login</title>
+  </head>
+  <body>
+    <!-- NavBar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary background_color">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <!-- <img src="./assets/imgs/logo.png" alt="" class="img-fluid" width="100px" height="0px"> -->
+          <h1 class="primary_font">
+            To Do List
+            <i class="fa-solid fa-paw"></i>
+          </h1>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+
+          <div class="buttons_container">
+            <button class="btn" id="loginBtn">
+              <a class="nav-link" onclick="loginRedirect()">Login</a>
+            </button>
+            <button class="btn" id="signupBtn">
+              <a class="nav-link" onclick="signUpRedirect()">Sign Up</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!--1-2 paragraphs (mid-left)
+	2 text fields (mid left)
+	1 button (mid left)
+	image (mid-right)-->
+    
+  </body>
+</html>
